# figsynth

./: .gitignore  README.md  cabal.project  figsynth.cabal
src/: Main.hs
src/Synth/: GUI.hs  Server.hs  Source.hs
src/Synth/GUI/: Common.hs  Graph.hs  Input.hs
src/Synth/Source/: Buffer.hs  Params.hs  Polygon.hs
